# BasicRayTracer

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/BasicRayTracer/: Camera.h  Dielectric.h  HitResult.h  Lambertian.h  Material.h  Metal.h  Primitive.h  Random.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Util.h
src/: CMakeLists.txt  Camera.cpp  Dielectric.cpp  HitResult.cpp  Lambertian.cpp  Metal.cpp  Random.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  Sphere.cpp  Util.cpp
